maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:6: error: ';' expected but '(' found.
  var Ttraite : Array[Boolean](hauteur * largeur)
                              ^JediEscaper:7: error: ';' expected but '(' found.
  var Tvaleur : Array[Int](hauteur * largeur)
                          ^JediEscaper:24: error: '(' expected but '{' found.
  }while{T(positionBuggleX + positionBuggleY)}
        ^